fix(#5): Arruma a sombra e adiciona gap

--- a/app/home.css
+++ b/app/home.css
@@ -14,8 +14,9 @@ div.cards {
 
 div.topics {
   display: flex;
+  gap: 1rem;
 
-  padding-top: 2rem;
+  padding: 2rem;
 
   overflow: auto;
 }
